fix: resolve various PR comments on Graasp mention and Library mention

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap"
     />
-    <title>Graasp Analytics</title>
+    <title>LNCO.ai Analytics</title>
   </head>
   <body>
     <div id="root"></div>
